--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,7 +57,7 @@ BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
 WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 r.LegacyLuminanceFactors=False
 r.ClearCoatNormal=False
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=2
 r.ReflectionMethod=1
 r.ReflectionCaptureResolution=128
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
@@ -69,17 +69,17 @@ r.Lumen.ScreenTracingSource=0
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=True
 r.MegaLights.EnableForProject=False
 r.RayTracing.Shadows=False
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=True
 r.RayTracing.RayTracingProxies.ProjectEnabled=True
 r.RayTracing.UseTextureLod=False
 r.PathTracing=True
 r.GenerateMeshDistanceFields=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
-r.Nanite.ProjectEnabled=True
+r.Nanite.ProjectEnabled=False
 r.AllowStaticLighting=False
 r.NormalMapsForStaticLighting=False
-r.ForwardShading=False
+r.ForwardShading=True
 r.VertexFoggingForOpaque=True
 r.SeparateTranslucency=True
 r.TranslucentSortPolicy=0
@@ -103,7 +103,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.800000
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=True
-r.AntiAliasingMethod=0
+r.AntiAliasingMethod=3
 r.MSAACount=4
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
